fix CORS for localhost and vercel